# ycache

./: .gitignore  README.md  pyproject.toml
tests/: test_disk_cache.py  test_orjson_cache.py  test_pickled_cache.py
ycache/: __init__.py  core.py
