[project]
name = "ycache"
version = "0.2.0"
description = "a simple cache tools"
authors = [
    {name = "yapex",email = "yapex.yin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "diskcache (>=5.6.3,<6.0.0)",
    "orjson (>=3.10.15,<4.0.0)",
    "xxhash (>=3.5.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

